<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iPod</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
     <string name="find_no_file">No Files</string>
     <string name="main_head_music_list">Music List</string>
     <string name="main_head_performer">Performer</string>
     <string name="main_head_music">Music</string>
     <string name="main_head_special">Special</string>
     <string name="main_head_compose">Compose</string>
     <string name="main_head_audio_book">Audio Book</string>
     <string name="main_head_blogger">Blogger</string>

</resources>
