<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingBottom="15px"
    android:paddingLeft="27px"
    android:paddingRight="27px"
    android:paddingTop="15px"
    tools:context="carnetapp.ipod.ui.MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="62px"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_main_head_left"
            android:layout_width="72px"
            android:layout_height="62px"
            android:layout_weight="0"
            android:src="@drawable/sel_main_iv_arrows_left" />

        <HorizontalScrollView
            android:id="@+id/sv_main_head"
            android:layout_width="0px"
            android:layout_height="62px"
            android:layout_weight="1"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_main_head_music_list"
                    style="@style/style_main_head_tv"
                    android:layout_width="142px"
                    android:layout_height="match_parent"
                    android:text="@string/main_head_music_list" />

                <TextView
                    android:id="@+id/tv_main_head_music_performer"
                    style="@style/style_main_head_tv"
                    android:layout_width="142px"
                    android:layout_height="match_parent"
                    android:text="@string/main_head_performer" />

                <TextView
                    android:id="@+id/tv_main_head_music"
                    style="@style/style_main_head_tv"
                    android:layout_width="142px"
                    android:layout_height="match_parent"
                    android:text="@string/main_head_music" />

                <TextView
                    android:id="@+id/tv_main_head_music_special"
                    style="@style/style_main_head_tv"
                    android:layout_width="142px"
                    android:layout_height="match_parent"
                    android:text="@string/main_head_special" />

                <TextView
                    android:id="@+id/tv_main_head_music_compose"
                    style="@style/style_main_head_tv"
                    android:layout_width="142px"
                    android:layout_height="match_parent"
                    android:text="@string/main_head_compose" />

                <TextView
                    android:id="@+id/tv_main_head_music_audiobook"
                    style="@style/style_main_head_tv"
                    android:layout_width="142px"
                    android:layout_height="match_parent"
                    android:text="@string/main_head_audio_book"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_main_head_music_blogger"
                    style="@style/style_main_head_tv"
                    android:layout_width="142px"
                    android:layout_height="match_parent"
                    android:text="@string/main_head_blogger"
                    android:visibility="gone" />
            </LinearLayout>
        </HorizontalScrollView>

        <ImageView
            android:id="@+id/iv_main_head_right"
            android:layout_width="74px"
            android:layout_height="62px"
            android:layout_weight="0"
            android:src="@drawable/sel_main_iv_arrows_right" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <FrameLayout
            android:id="@+id/fl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" >
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/no_file_rela"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-20dp" >

            <!-- android:background="@drawable/play_bg" -->

            <ImageView
                android:id="@+id/no_file_image"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/prompt" />

            <TextView
                android:id="@+id/find_no_file"
                style="@style/style_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="90px"
                android:text="@string/find_no_file" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>